# functional-autodiff

./: README.md  contact.txt  functional-autodiff.cabal
regression/: DataGen.hs  LinearRegression.hs  LogisticRegression.hs  Train.hs
src/: AutoDiff.hs
src/AutoDiff/: Forward.hs  Types.hs
test/: AutoDiffSpec.hs
tex/: report.tex
visualization/: GenData.hs  plot.py
visualization/data/: composite.csv  exponential.csv  polynomial.csv  sinusoidal.csv
