cabal-version:      3.0
name:               functional-autodiff
version:            0.1.0.0
synopsis:           A simple automatic differentiation library
license:            MIT
license-file:       LICENSE
author:             Your Name
maintainer:         you@example.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AutoDiff
    other-modules:    AutoDiff.Types
                    , AutoDiff.Forward
    build-depends:    base ^>=4.17 || ^>=4.18 || ^>=4.19 || ^>=4.20
    hs-source-dirs:   src
    default-language: GHC2021

test-suite functional-autodiff-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    AutoDiffSpec
    build-depends:
        base ^>=4.17 || ^>=4.18 || ^>=4.19 || ^>=4.20
      , functional-autodiff
      , hspec ^>=2.11

executable linear-regression
    import:           warnings
    default-language: GHC2021
    main-is:          LinearRegression.hs
    other-modules:    DataGen
                    , Train
    hs-source-dirs:   regression
    build-depends:
        base ^>=4.17 || ^>=4.18 || ^>=4.19 || ^>=4.20
      , functional-autodiff
      , random ^>=1.2

executable logistic-regression
    import:           warnings
    default-language: GHC2021
    main-is:          LogisticRegression.hs
    other-modules:    DataGen
                    , Train
    hs-source-dirs:   regression
    build-depends:
        base ^>=4.17 || ^>=4.18 || ^>=4.19 || ^>=4.20
      , functional-autodiff
      , random ^>=1.2
